WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294292
[visionOS] Captions are not resized correctly in immersive mode
https://bugs.webkit.org/show_bug.cgi?id=294292
Summary
[visionOS] Captions are not resized correctly in immersive mode
Jer Noble
Reported
2025-06-10 15:33:00 PDT
[visionOS] Captions are not resized correctly in immersive mode
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2025-06-10 15:33:00 PDT
<
rdar://problem/152167791
>
Jer Noble
Comment 2
2025-06-10 15:42:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46574
EWS
Comment 3
2025-06-11 08:36:38 PDT
Committed
296087@main
(7835a6571119): <
https://commits.webkit.org/296087@main
> Reviewed commits have been landed. Closing PR #46574 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug