[visionOS] Captions are not resized correctly in immersive mode rdar://152167791 https://bugs.webkit.org/show_bug.cgi?id=294292

Reviewed by Andy Estes.

We are calling the wrong method for updating the size of the TextTrackRepresentation
when the bounds of the CaptionLayer changes.

* Source/WebKit/Platform/ios/VideoPresentationInterfaceLMK.mm:
(WebKit::VideoPresentationInterfaceLMK::captionsLayerBoundsChanged):

Canonical link: https://commits.webkit.org/296087@main